--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,31 @@ buildscript {
         google()
         jcenter()
     }
+    ext {
+        nav_version = '2.2.0'
+        lifecycle_version = '2.2.0'
+        room_version = '2.2.6'
+        lottieVersion = '3.3.1'
+        lifecycleVersion = '2.3.0'
+        roomVersion = '2.3.0-beta02'
+        pagingVersion = '3.0.0-beta01'
+        retrofitVersion = '2.7.2'
+        okhttpLoggingInterceptorVersion = '4.9.0'
+        coroutinesVersion = '1.4.2'
+        glideVersion = '4.11.0'
+        daggerVersion = '2.25.4'
+        fragmentVersion = "1.3.1"
+        lottieVersion = '3.3.1'
+        androidXTestCoreVersion = '1.3.0'
+        coreTestingVersion = '2.1.0'
+        androidXTestExtKotlinRunnerVersion = '1.1.1'
+        hamcrestVersion = '1.3'
+        robolectricVersion = '4.3.1'
+        mockitoKotlinVersion = '2.2.0'
+        mockitoAndroidVersion = '2.26.0'
+        mockitoInlineVersion = '2.26.0'
+        coroutines_android_version = '1.3.9'
+    }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
