--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,10 @@ buildscript {
         room_version = '2.2.6'
         lottieVersion = '3.3.1'
         lifecycleVersion = '2.3.0'
-        roomVersion = '2.3.0-beta02'
-        pagingVersion = '3.0.0-beta01'
+        roomVersion = '2.2.6'
         retrofitVersion = '2.7.2'
         okhttpLoggingInterceptorVersion = '4.9.0'
-        coroutinesVersion = '1.4.2'
+        coroutinesVersion = '1.4.3'
         glideVersion = '4.11.0'
         daggerVersion = '2.25.4'
         fragmentVersion = "1.3.1"
