--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
@@ -53,6 +58,7 @@ dependencies {
     /* Dagger2 */
     implementation "com.google.dagger:dagger-android:$rootProject.daggerVersion"
     implementation "com.google.dagger:dagger-android-support:$rootProject.daggerVersion"
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0-alpha05'
     kapt "com.google.dagger:dagger-android-processor:$rootProject.daggerVersion"
     kapt "com.google.dagger:dagger-compiler:$rootProject.daggerVersion"
     annotationProcessor "com.google.dagger:dagger-compiler:$rootProject.daggerVersion"
@@ -85,4 +91,8 @@ dependencies {
     testImplementation "androidx.arch.core:core-testing:${coreTestingVersion}"
     testImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_android_version"
+    debugImplementation "androidx.fragment:fragment-testing:$fragmentVersion"
+    androidTestImplementation 'androidx.test:rules:1.3.0'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    testImplementation 'org.robolectric:robolectric:4.4'
 }
